Option format optimize

--- a/Plugins/DLL/Kontakt/Manifest.ini
+++ b/Plugins/DLL/Kontakt/Manifest.ini
@@ -7,7 +7,7 @@ WTitle=FX
 WClass=#32770
 PClass=Kontakt
 BClass=None
-VUI=Kontakt.vui
+VUI=Kontakt
 VUIName=Kontakt
 Module=Kontakt.dll
 [KontaktBridge]
@@ -15,7 +15,7 @@ WTitle=bridge
 WClass=REAPERb32host
 PClass=Kontakt
 BClass=None
-VUI=Kontakt.vui
+VUI=Kontakt
 VUIName=Kontakt
 Module=Kontakt.dll
 [ContentMissing]
@@ -23,7 +23,7 @@ WTitle=Content Missing
 WClass=#32770
 PClass=Kontakt
 BClass=None
-VUI=ConntentMissing.vui
+VUI=ConntentMissing
 VUIName=ConntentMissing
 Module=Kontakt.dll
 [Progress]
@@ -31,6 +31,6 @@ WTitle=Progress
 WClass=#32770
 PClass=Kontakt
 BClass=None
-VUI=Progress.vui
+VUI=Progress
 VUIName=Progress
 Module=Kontakt.dll
