Added SPG for option format

--- a/Plugins/DLL/Kontakt/Manifest.ini
+++ b/Plugins/DLL/Kontakt/Manifest.ini
@@ -8,7 +8,7 @@ WClass=#32770
 PClass=Kontakt
 BClass=None
 VUI=Kontakt
-VUIName=Kontakt
+PluginName=Kontakt
 Module=Kontakt.dll
 [KontaktBridge]
 WTitle=bridge
@@ -16,7 +16,7 @@ WClass=REAPERb32host
 PClass=Kontakt
 BClass=None
 VUI=Kontakt
-VUIName=Kontakt
+PluginName=Kontakt
 Module=Kontakt.dll
 [ContentMissing]
 WTitle=Content Missing
@@ -24,7 +24,7 @@ WClass=#32770
 PClass=Kontakt
 BClass=None
 VUI=ConntentMissing
-VUIName=ConntentMissing
+PluginName=Kontakt
 Module=Kontakt.dll
 [Progress]
 WTitle=Progress
@@ -32,5 +32,5 @@ WClass=#32770
 PClass=Kontakt
 BClass=None
 VUI=Progress
-VUIName=Progress
+PluginName=Kontakt
 Module=Kontakt.dll
