--- a/Plugins/DLL/Serum/Manifest.ini
+++ b/Plugins/DLL/Serum/Manifest.ini
@@ -8,7 +8,7 @@ WClass=#32770
 PClass=Serum
 BClass=None
 VUI=Serum
-VUIName=Serum
+PluginName=Serum
 Module=Serum_
 [SerumX86]
 WTitle=bridge
@@ -16,5 +16,5 @@ WClass=REAPERb32host
 PClass=Serum
 BClass=None
 VUI=Serum
-VUIName=Serum
+PluginName=Serum
 Module=Serum
