Prepare build system for new changes

--- a/Plugins/DLL/Kontakt/Manifest.ini
+++ b/Plugins/DLL/Kontakt/Manifest.ini
@@ -9,7 +9,7 @@ PClass=Kontakt
 BClass=None
 VUI=Kontakt
 PluginName=Kontakt
-Module=Kontakt.dll
+Module=Kontakt
 [KontaktBridge]
 WTitle=bridge
 WClass=REAPERb32host
@@ -17,7 +17,7 @@ PClass=Kontakt
 BClass=None
 VUI=Kontakt
 PluginName=Kontakt
-Module=Kontakt.dll
+Module=Kontakt
 [ContentMissing]
 WTitle=Content Missing
 WClass=#32770
@@ -25,7 +25,7 @@ PClass=Kontakt
 BClass=None
 VUI=ConntentMissing
 PluginName=Kontakt
-Module=Kontakt.dll
+Module=Kontakt
 [Progress]
 WTitle=Progress
 WClass=#32770
@@ -33,4 +33,4 @@ PClass=Kontakt
 BClass=None
 VUI=Progress
 PluginName=Kontakt
-Module=Kontakt.dll
+Module=Kontakt
