Fix Serum detection and ignore case when detecting DLL names

--- a/Plugins/DLL/Serum/Manifest.ini
+++ b/Plugins/DLL/Serum/Manifest.ini
@@ -2,9 +2,9 @@
 Name=Serum
 Author=Viruzober
 Mail=Den-viruzober@yandex.ru
-[SerumX64]
+[Serum]
 PClass=Serum
 BClass=None
 VUI=Serum
 PluginName=Serum
-Module=Serum_
+Module=Serum
