--- a/Plugins/DLL/Kontakt/Manifest.ini
+++ b/Plugins/DLL/Kontakt/Manifest.ini
@@ -3,7 +3,7 @@ Name=Kontakt
 Author=Viruzober
 Mail=Den-viruzober@yandex.ru
 [Kontakt]
-PClass=Kontakt
+12PClass=Kontakt
 BClass=None
 VUI=Kontakt
 PluginName=Kontakt
