--- a/Plugins/DLL/KontaktLib/IlyaEfimovBayanRight/IlyaEfimovBayanRight.csproj
+++ b/Plugins/DLL/KontaktLib/IlyaEfimovBayanRight/IlyaEfimovBayanRight.csproj
@@ -16,12 +16,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Gettext.Tools" Version="0.21.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\..\MagicKeys\MagicKeys.csproj" />
     <ProjectReference Include="..\..\Kontakt\Kontakt.csproj" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="set mkbuilddir=$(SolutionDir)MagicKeys\bin\$(PlatformName)\$(ConfigurationName)&#xD;&#xA;set distdir=$(SolutionDir)Dist\$(PlatformName)&#xD;&#xA;xcopy /e /i /q &quot;$(ProjectDir)Images&quot; &quot;%25mkbuilddir%25\Plugins\KontaktLib\$(TargetName)\Images&quot; &gt; nul&#xD;&#xA;xcopy /e /i /q &quot;$(ProjectDir)VUI&quot; &quot;%25mkbuilddir%25\Plugins\KontaktLib\$(TargetName)\VUI&quot; &gt; nul&#xD;&#xA;copy /y &quot;$(ProjectDir)Manifest.ini&quot; &quot;%25mkbuilddir%25\Plugins\KontaktLib\$(TargetName)\&quot; &gt; nul&#xD;&#xA;copy /y &quot;$(TargetPath)&quot; &quot;%25mkbuilddir%25\Plugins\KontaktLib\$(TargetName)\&quot; &gt; nul&#xD;&#xA;xcopy /e /i /q &quot;$(ProjectDir)Images&quot; &quot;%25distdir%25\Plugins\KontaktLib\$(TargetName)\Images&quot; &gt; nul&#xD;&#xA;xcopy /e /i /q &quot;$(ProjectDir)VUI&quot; &quot;%25distdir%25\Plugins\KontaktLib\$(TargetName)\VUI&quot; &gt; nul&#xD;&#xA;copy /y &quot;$(ProjectDir)Manifest.ini&quot; &quot;%25distdir%25\Plugins\KontaktLib\$(TargetName)\&quot; &gt; nul&#xD;&#xA;copy /y &quot;$(TargetPath)&quot; &quot;%25distdir%25\Plugins\KontaktLib\$(TargetName)\&quot; &gt; nul" />
+    <Exec Command="set mkbuilddir=$(SolutionDir)MagicKeys\bin\$(PlatformName)\$(ConfigurationName)&#xD;&#xA;set distdir=$(SolutionDir)Dist\$(PlatformName)&#xD;&#xA;xcopy /e /i /q /y &quot;$(ProjectDir)Images&quot; &quot;%25mkbuilddir%25\Plugins\KontaktLib\$(TargetName)\Images&quot; &gt; nul&#xD;&#xA;xcopy /e /i /q /y &quot;$(ProjectDir)VUI&quot; &quot;%25mkbuilddir%25\Plugins\KontaktLib\$(TargetName)\VUI&quot; &gt; nul&#xD;&#xA;copy /y &quot;$(ProjectDir)Manifest.ini&quot; &quot;%25mkbuilddir%25\Plugins\KontaktLib\$(TargetName)\&quot; &gt; nul&#xD;&#xA;copy /y &quot;$(TargetPath)&quot; &quot;%25mkbuilddir%25\Plugins\KontaktLib\$(TargetName)\&quot; &gt; nul&#xD;&#xA;xcopy /e /i /q /y &quot;$(ProjectDir)Images&quot; &quot;%25distdir%25\Plugins\KontaktLib\$(TargetName)\Images&quot; &gt; nul&#xD;&#xA;xcopy /e /i /q /y &quot;$(ProjectDir)VUI&quot; &quot;%25distdir%25\Plugins\KontaktLib\$(TargetName)\VUI&quot; &gt; nul&#xD;&#xA;copy /y &quot;$(ProjectDir)Manifest.ini&quot; &quot;%25distdir%25\Plugins\KontaktLib\$(TargetName)\&quot; &gt; nul&#xD;&#xA;copy /y &quot;$(TargetPath)&quot; &quot;%25distdir%25\Plugins\KontaktLib\$(TargetName)\&quot; &gt; nul" />
   </Target>
 
 </Project>
