--- a/MagicKeys/MagicKeys.csproj
+++ b/MagicKeys/MagicKeys.csproj
@@ -95,6 +95,18 @@
   <ItemGroup>
     <Compile Update="Forms\DebugForm.cs" />
     <Compile Update="Forms\DebugFormActions.cs" />
+    <Compile Update="Forms\UpdateFormActions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Forms\UpdateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Forms\InputMultiTextBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Forms\InputMultiTextActions.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Forms\InputTextBoxActions.cs">
       <SubType>Form</SubType>
     </Compile>
