--- a/Updater/Updater.csproj
+++ b/Updater/Updater.csproj
@@ -50,6 +50,12 @@
     <Compile Update="Forms\MenuKeys.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="UpdateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="UpdateFormActions.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
